@@ -134,6 +134,9 @@ IMPROVEMENTS:
   ZOOKEEPER-2183 Concurrent Testing Processes and Port Assignments
   (Chris Nauroth via hdeng)
 
+  ZOOKEEPER-2126 Improve exit log messsage of EventThread and SendThread by
+  adding SessionId (surendra singh lilhore via rakeshr)
+
 Release 3.5.0 - 8/4/2014
 
 NEW FEATURES:
